// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeButton Color should have correct classes for custom color 1`] = `
<button
  class="ui orange button"
/>
`;

exports[`SeButton Color should have correct classes for primary color 1`] = `
<button
  class="ui primary button"
/>
`;

exports[`SeButton Color should have correct classes for secondary color 1`] = `
<button
  class="ui secondary button"
/>
`;
